[Fix] Prevent general module inputs stretching

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ ul{
 .general{
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 .section{
